--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/utils/global.css">
+    <link rel="stylesheet" href="/style/utils/global.css">
     <title>HillTop</title>
 </head>
 <body>
@@ -52,9 +52,57 @@
                     </div>
                 </div>
                 <div class="date">
-                    <label for="date">
+                    <label for="date">Check-in
+                        <br>
                         <input type="date" name="date">
                     </label>
+                    <br>
+                    <label for="date1">Check-out
+                        <br>
+                        <input type="date" name="date1">
+                    </label>
+                    <label for="number">Rooms
+                        <select name="nomber" id="number">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+                    </label>
+                    <label for="number">Adults
+                        <select name="nomber" id="number1">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+                    </label>
+                    <label for="number">Children
+                        <select name="nomber" id="number2">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+                    </label>
+                    <button type="button">Find Rooms</button>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="bottom_left">
+                    <img src="./icon/simple-icons_yourtraveldottv.png" alt="">
+                    <p>30,000+ Things to do </p>
+                </div>
+                <div class="bottom_center">
+                    <img src="./icon/ic_baseline-gpp-good.png" alt="">
+                    <p>3,000+ Tour operators  </p>
+                </div>
+                <div class="bottom_right">
+                    <img src="./icon/fa6-solid_graduation-cap.png" alt="">
+                    <p>30,000+ Certified agents </p>
                 </div>
             </div>
         </main>
